# aiohttp_simple_template

./: README.md  pyproject.toml
src/: entry.py
src/demo/: app.py  config.py
src/demo/templates/: index.html
src/demo/views/: frontend.py
